--- a/client/src/app/about/about.component.html
+++ b/client/src/app/about/about.component.html
@@ -3,8 +3,8 @@
 	</div>
 	<div class="title-page">
 		<div class="container">
-			<h4>Contato</h4>
-			<span>Breve descrição da pagina de detalhes.</span>
+			<h4>Junte-se a nós</h4>
+			<span>Inscreva-se, e seja um voluntário nessa causa</span>
 		</div>
 	</div>
 </div>
@@ -21,33 +21,72 @@ $( document ).ready(function() {
       <div class="card-body" style="padding-top:0px;">
         <div class="row container-contato">
 			<div class="col-md-7" style="margin-top:30px;">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-			<div class="row">
+			<p>O Cidadão Fiscal apresenta informações públicas em forma organizada
+        para facilitar o entendimento por parte de todos os cidadãos. Todo o projeto
+        foi desenvolvido por cidadãos como você, usando um pouco do tempo
+        tão concorrido de nossos dias. Junte-se a nós como voluntário
+        e ajude a fazer ainda mais! </p>
+
+        <div class="row">
               <div class="form-group col-md-6">
-                <label>None</label>
-                <input type="text" class="form-control">
+                <label>Nome</label>
+                <input [(ngModel)]="volunteer.nomeVoluntario" type="text" class="form-control">
               </div>
               <div class="form-group col-md-6">
                 <label>Email</label>
-                <input type="email" class="form-control">
+                <input [(ngModel)]="volunteer.email" type="email" class="form-control" placeholder="email@example.com">
               </div>
               <div class="form-group col-md-6">
                 <label>Telefone</label>
-                <input type="text" class="form-control">
+                <input [(ngModel)]="volunteer.telefone" type="number" class="form-control" maxlength="14">
               </div>
               <div class="form-group col-md-6">
-                <label>Assunto</label>
-                <input type="text" class="form-control">
+                <label>Estado</label>
+                <select [(ngModel)]="volunteer.estado" name="estados-brasil" class="form-control" >
+                  <option value="AC">Acre</option>
+                  <option value="AL">Alagoas</option>
+                  <option value="AP">Amapá</option>
+                  <option value="AM">Amazonas</option>
+                  <option value="BA">Bahia</option>
+                  <option value="CE">Ceará</option>
+                  <option value="DF">Distrito Federal</option>
+                  <option value="ES">Espírito Santo</option>
+                  <option value="GO">Goiás</option>
+                  <option value="MA">Maranhão</option>
+                  <option value="MT">Mato Grosso</option>
+                  <option value="MS">Mato Grosso do Sul</option>
+                  <option value="MG">Minas Gerais</option>
+                  <option value="PA">Pará</option>
+                  <option value="PB">Paraíba</option>
+                  <option value="PR">Paraná</option>
+                  <option value="PE">Pernambuco</option>
+                  <option value="PI">Piauí</option>
+                  <option value="RJ">Rio de Janeiro</option>
+                  <option value="RN">Rio Grande do Norte</option>
+                  <option value="RS">Rio Grande do Sul</option>
+                  <option value="RO">Rondônia</option>
+                  <option value="RR">Roraima</option>
+                  <option value="SC">Santa Catarina</option>
+                  <option value="SP">São Paulo</option>
+                  <option value="SE">Sergipe</option>
+                  <option value="TO">Tocantins</option>
+                </select>
               </div>
               <div class="form-group col-md-12">
-                <label>None</label>
-                <textarea class="form-control" rows="5"></textarea>
+                <label>Por que você quer se juntar a causa?</label>
+                <textarea [(ngModel)]="volunteer.causa" class="form-control" rows="5"></textarea>
               </div>
 			  <div class="col-md-12">
-			  <button class="btn btn-primary">Enviar</button>
+			  <div>
+          <button (click)="sendVol()" class="btn btn-primary">Enviar</button>
+          <div *ngIf="status"><strong style="color: red">Preencha todos os campos corretamente</strong>
+          </div>
+          <div *ngIf="cadastrado"><strong style="color: green">Voluntário cadastrado com sucesso</strong></div>
+        </div>
 			  </div>
+
 			</div>
+
 			</div>
 			<div class="col-md-5" style="margin-top:30px;">
 				<img src="./assets/img/img-contato.png" />
