--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -14,6 +14,9 @@
         <li class="nav-item" [routerLinkActive]="['active']">
           <a class="nav-link" href="#" routerLink="/detail" (click)="navbarCollapsed = true">Detalhes</a>
         </li>
+        <li class="nav-item" [routerLinkActive]="['active']">
+          <a class="nav-link" href="#" routerLink="/volunteer" (click)="navbarCollapsed = true">Voluntários</a>
+        </li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item" [routerLinkActive]="['active']">
