--- a/client/src/app/volunteer/volunteer.component.html
+++ b/client/src/app/volunteer/volunteer.component.html
@@ -42,9 +42,9 @@ $( document ).ready(function() {
         [limit]="10"
         [rowHeight]="'46'"
         [messages]="{emptyMessage:'Sem dados para exibir',totalMessage:'no total'}">>
-          <ngx-datatable-column prop="nomeVoluntario" name="Voluntário(a)"  [flexGrow]="4">
+          <ngx-datatable-column prop="nome" name="Voluntário(a)"  [flexGrow]="4">
             <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-                <span [ngbTooltip]="row.nomeVoluntario" container="body">{{value}}</span>
+                <span [ngbTooltip]="row.nomw" container="body">{{value}}</span>
             </ng-template>
           </ngx-datatable-column>
           <ngx-datatable-column prop="email" name="Email" [flexGrow]="6">
