--- a/client/src/app/about/about.component.html
+++ b/client/src/app/about/about.component.html
@@ -30,7 +30,7 @@ $( document ).ready(function() {
         <div class="row">
               <div class="form-group col-md-6">
                 <label>Nome</label>
-                <input [(ngModel)]="volunteer.nomeVoluntario" type="text" class="form-control">
+                <input [(ngModel)]="volunteer.nome" type="text" class="form-control">
               </div>
               <div class="form-group col-md-6">
                 <label>Email</label>
@@ -38,7 +38,7 @@ $( document ).ready(function() {
               </div>
               <div class="form-group col-md-6">
                 <label>Telefone</label>
-                <input [(ngModel)]="volunteer.telefone" type="number" class="form-control" maxlength="14">
+                <input [(ngModel)]="volunteer.telefone" type="text" class="form-control" maxlength="14">
               </div>
               <div class="form-group col-md-6">
                 <label>Estado</label>
