--- a/client/src/app/volunteer/volunteer.component.html
+++ b/client/src/app/volunteer/volunteer.component.html
@@ -39,8 +39,9 @@ $( document ).ready(function() {
         [columnMode]="'flex'"
         [headerHeight]="40"
         [footerHeight]="40"
-        [limit]="10"
+        [limit]="5"
         [rowHeight]="'46'"
+        (page) = "setPage($event)"
         [messages]="{emptyMessage:'Sem dados para exibir',totalMessage:'no total'}">>
           <ngx-datatable-column prop="nome" name="Voluntário(a)"  [flexGrow]="4">
             <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
