adds readme for front and back ends

--- a/client/src/app/detail/detail.component.html
+++ b/client/src/app/detail/detail.component.html
@@ -71,7 +71,7 @@ $( document ).ready(function() {
             <button class="btn btn-primary" (click)="getPesquisa(); getLoading()">Pesquisar</button>
         </div>
         <div 
-        *ngIf="status"><strong style="color: red">Preencha todos os campos corretamente</strong>
+        *ngIf="status"><strong style="color: red">Preencha pelo menos um campo</strong>
         </div>
         <div id= "loadingDiv" style="display: none">
            <p class="progress-bar" style="background-color: #235982">Carregando...</p>
